# IKMS-DocumentQA

./: README.md
ikms-backend/: pyproject.toml  requirements.txt
ikms-backend/src/app/: api.py  main.py  models.py
ikms-backend/src/app/core/: config.py
ikms-backend/src/app/core/agents/: agents.py  graph.py  prompts.py  state.py  tools.py
ikms-backend/src/app/core/retrieval/: serialization.py
ikms-backend/src/app/services/: indexing_service.py
ikms-frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
ikms-frontend/src/: App.jsx
ikms-frontend/src/components/: MessageInput.jsx  chat-interface.jsx  document-upload-area.jsx
ikms-frontend/src/components/ai-elements/: inline-citation.jsx
